--- a/在路径上添加自定义文字.md
+++ b/在路径上添加自定义文字.md
@@ -113,7 +113,7 @@ canvas.on('before:path:created',function(opt){
 	console.log(path.path,pathInfo);
 })
 ```
-![在这里插入图片描述](https://img-blog.csdnimg.cn/402057e6de2941e19a344cabe15c73ba.png![在这里插入图片描述](https://img-blog.csdnimg.cn/d86e5e12f7a449a09265fee1c0b1b289.png)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/402057e6de2941e19a344cabe15c73ba.png)
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/d570722927b04a7dbea4eb9c48074c80.png)
 
 ```javascript
